objects/Customer_Tactics__c.object
<CustomObject>
    <description>Used for Value Propositions on Account Plans</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipName>Customer_Tactics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competitor_Value_Propositions__c</fullName>
        <description>Competitor Value Propositions</description>
        <inlineHelpText>Competitor Value Propositions</inlineHelpText>
        <label>Competitor Value Propositions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Needs__c</fullName>
        <description>Type of Customer Needs</description>
        <inlineHelpText>Type of Customer Needs</inlineHelpText>
        <label>Customer Needs Type</label>
        <picklist>
            <picklistValues>
                <fullName>Explicit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implicit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidden</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Danfoss_Value_Propositions__c</fullName>
        <description>Danfoss Value Propositions</description>
        <inlineHelpText>Danfoss Value Propositions</inlineHelpText>
        <label>Danfoss Value Propositions</label>
        <type>TextArea</type>
    </fields>
    <label>Value Proposition</label>
    <nameField>
        <label>Customer Need</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Propositions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>